syntax = "proto3";

option go_package = "./";

package joblet;

service JobletService{
  rpc RunJob(RunJobReq) returns (RunJobRes){}
  rpc GetJobStatus(GetJobStatusReq) returns (GetJobStatusRes){}
  rpc StopJob(StopJobReq) returns (StopJobRes){}
  rpc GetJobLogs(GetJobLogsReq) returns (stream DataChunk);
  rpc ListJobs(EmptyRequest) returns (Jobs){}
}

message Jobs{
  repeated Job jobs = 1;
}

message Job{
  string id = 1;
  string command = 2;
  repeated string args = 3;
  int32 maxCPU = 4;
  string cpuCores = 5;
  int32 maxMemory = 6;
  int32 maxIOBPS = 7;
  string status = 8;
  string startTime = 9;
  string endTime = 10;
  int32 exitCode = 11;
  string scheduledTime = 12;    // When the job should execute (RFC3339 format, empty if immediate)
}

message EmptyRequest {}

message RunJobReq{
  string command = 1;
  repeated string args = 2;
  int32 maxCPU = 3;
  string cpuCores = 4;
  int32 maxMemory = 5;
  int32 maxIOBPS = 6;
  repeated FileUpload uploads = 7;
  string schedule = 8;          // RFC3339 formatted time string
}

message FileUpload {
  string path = 1;           // Relative path in job workspace
  bytes content = 2;         // File content
  uint32 mode = 3;           // Unix file permissions (e.g., 0644)
  bool isDirectory = 4;      // True if this represents a directory
}

message RunJobRes{
  string id = 1;
  string command = 2;
  repeated string args = 3;
  int32 maxCPU = 4;
  string cpuCores = 5;
  int32 maxMemory = 6;
  int32 maxIOBPS = 7;
  string status = 8;
  string startTime = 9;
  string endTime = 10;
  int32 exitCode = 11;
  string scheduledTime = 12;    // When the job should execute (empty if immediate)
}

// GetJobStatus
message GetJobStatusReq{
  string id = 1;
}

message GetJobStatusRes{
  string id = 1;
  string command = 2;
  repeated string args = 3;
  int32 maxCPU = 4;
  string cpuCores = 5;
  int32 maxMemory = 6;
  int32 maxIOBPS = 7;
  string status = 8;
  string startTime = 9;
  string endTime = 10;
  int32 exitCode = 11;
  string scheduledTime = 12;    // When the job should execute (empty if immediate)
}

// StopJob
message StopJobReq{
  string id = 1;
}

message StopJobRes{
  string id = 1;
  string status = 2;
  string endTime = 3;
  int32 exitCode = 4;
}

// GetJobLogs
message GetJobLogsReq{
  string id = 1;
}

message DataChunk {
  bytes payload = 1;
}